<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:backgroundTint="@color/background"
        tools:context=".ui.RegisterActivity">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.372"
            app:srcCompat="@drawable/gf_logo" />

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.565">

        <EditText
                android:id="@+id/nickRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button_outline_thin"
                android:ems="10"
                android:hint="@string/nick"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:singleLine="true" />

        <EditText
                android:id="@+id/emailRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button_outline_thin"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:singleLine="true" />

        <EditText
                android:id="@+id/passwordRegister"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button_outline_thin"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:singleLine="true" />

        <EditText
                android:id="@+id/passwordRegisterRepeat"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button_outline_thin"
                android:ems="10"
                android:hint="@string/password_repeat"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:singleLine="true" />

        <EditText
                android:id="@+id/nameRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button_outline_thin"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:singleLine="true" />

        <EditText
                android:id="@+id/ageRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button_outline_thin"
                android:ems="10"
                android:hint="@string/age"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:singleLine="true" />

        <ImageButton
                android:id="@+id/addPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/toast_frame"
                android:contentDescription="@string/addPhoto"
                app:srcCompat="@drawable/camera_icon" />

    </LinearLayout>

    <Button
            android:id="@+id/registerActivityButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/accent"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.28" />
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            android:layout_marginEnd="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
