...
    <string name="game_date">Data rozgrywki</string>
    <string name="game_description">Opis</string>
    <string name="game_finder">Game Finder</string>
    <string name="game_name">Nazwa gry</string>
    <string name="game_picture">Obrazek gry</string>
    <string name="placeholder_message">Wiadomość zastępcza</string>
    <string name="password_too_short">"Hasło zbyt krótkie (minimum 6 znaków)"</string>
    <string name="game_owner">Jestem właścicielem/mistrzem gry</string>
    <string name="game_pub">Game Pub</string>
    <string name="want_game_pub">Chcę grać w Game Pubie</string>
    <string name="dont_want_game_pub">Nie chcę grać w Game Pubie</string>
    <string name="whatever">Wszystko jedno</string>
    <string name="game_time">Godzina rozgrywki</string>
    <string name="game_type">Gatunek</string>
    <string name="gather_team">zbieram drużynę do game pubu</string>
    <string name="invalid_email_address">"Błędny adres e-mail"</string>
    <string name="invalid_game_data">"Uzupełnij wszystkie pola!"</string>
    <string name="invalid_login_data">"Niepoprawne dane logowania"</string>
    <string name="join_game">Dołącz do gry</string>
    <string name="localization">Lokalizacja</string>
    <string name="pick_localization">Wybierz lokalizację</string>
    <string name="add_game_date">Dodaj datę \nrozgrywki</string>
...
    <string name="logout">Wyloguj</string>
    <string name="my_games">Moje gry</string>
    <string name="my_profile">Mój profil</string>
    <string name="name">Imię</string>
    <string name="nick">Nick</string>
    <string name="no_login_data">Podaj dane logowania!</string>
    <string name="no_registration_data">"Podaj dane do rejestracji"</string>
    <string name="number_of_players">Ilość graczy</string>
    <string name="max_number_of_players">Maksymalna lość graczy</string>
    <string name="min_number_of_players">Minimalna lość graczy</string>
    <string name="open_navigation_drawer">Otwórz szufladę nawigacji</string>
    <string name="password">Hasło</string>
    <string name="password_repeat">Powtórz hasło</string>
...
    <string name="search">Wyszukaj</string>
    <string name="range_in_km">Zasięg w kilometrach</string>
    <string name="send_message">Wyślij wiadomość</string>
    <string name="sign_in">Zarejestruj się</string>
    <string name="slash">/</string>
    <string name="title_activity_maps">Map</string>
    <string name="two_different_passwords">Podane hasła są różne</string>
    <string name="type_game_name">Podaj nazwe gry</string>
    <string name="user_already_exists">Użytkownik z takim nickiem już istnieje</string>
    <string name="user_avatar">Avatar użytkownika</string>
    <string name="user_current_localization">Użyj obecnej lokalizacji</string>
    <string name="user_profile_localization">Użyj lokalizacji profilu</string>
    <string name="write_a_message">Napisz wiadomość</string>
    <string name="test_message">How are you doing? This is a long message that should probably wrap.</string>

...
